<resources>
    <string name="app_name">Blogger\'s Blog</string>
    <string name="welcome_to_blogger_s_blogs">WELCOME TO BLOGGER\'S BLOGS</string>
    <string name="register_to_blogger_s_blogs">Register to Blogger\'s Blogs</string>
    <string name="login_to_your_blog">Login to your Blog!!</string>
    <string name="please_enter_your_emailid">Please enter your email</string>
    <string name="please_enter_your_password">Please enter your Password</string>
    <string name="welcome">Welcome</string>
    <string name="log_out">Log out</string>
    <string name="please_enter_a_password">Please enter a password</string>
    <string name="please_enter_a_email">Please enter a Email</string>
    <string name="please_confirm_password">Please confirm password</string>
    <string name="searchUser">Search</string>
    <string name="profile">Profile</string>
    <string name="log_out_appBar">Log Out</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="submit">Submit</string>
    <string name="enter_description">Enter description</string>
    <string name="publish_your_masterpiece">Publish</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_posts">Your Posts</string>
    <string name="jan_1_2018">Jan 1 2018</string>
    <string name="username">Username</string>
    <string name="description_of_the_post">Description of the post</string>
    <string name="_0">0</string>
    <string name="this_is_notification_fragment">This is notification fragment</string>
    <string name="your_comment_here">Your comment here</string>
    <string name="write_your_comment">Write your comment</string>
    <string name="dark_mode">Dark Mode </string>
    <string name="posts">Posts</string>
    <string name="some_notification">Some Notification</string>
    <string name="blocked_users">Blocked Users</string>
    <string name="unblock">unblock</string>
    <string name="home">Home</string>
    <string name="notification">Notification</string>
    <string name="search_name">Click here to Search Name</string>
    <string name="search_btn">Search</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="blockMenu">Block</string>
    <string name="reportMenu">Report</string>
    <string name="profile_updateMenu">Profile Update</string>
    <string name="settingMenu">Setting</string>
    <string name="log_outMenu">Log Out</string>
    <string name="liked_by">Liked By:</string>
    <string name="timestamp">timestamp</string>
    <string name="title_activity_like">LikeActivity</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="follow">Follow</string>
    <string name="please_select_a_color_for_your_profile_background_theme">Please Select a Color for your profile background Theme</string>
    <string name="change_profile_theme">Change Profile Theme</string>
    <string name="apply_theme">Apply Theme</string>
    <string name="write_something">Write something..</string>
    <string name="post">Post</string>
    <string name="clear">Clear</string>
    <string name="messages">Messages</string>
    <string name="title_activity_messaging_main">MessagingMainActivity</string>
</resources>
