<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_view"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/default_usr"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/username_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/username"
                android:textColor="?attr/secondaryTextColor"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/profile_view"
                app:layout_constraintTop_toTopOf="@+id/profile_view" />

            <TextView
                android:id="@+id/date_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/jan_1_2018"
                android:textColor="?attr/secondaryTextColor"
                app:layout_constraintStart_toEndOf="@+id/profile_view"
                app:layout_constraintTop_toBottomOf="@+id/username_tv" />

            <ImageView
                android:id="@+id/card_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_action_more_vert"
                android:tint="?attr/black"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/comment_DescTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/description_of_the_post"
                android:textColor="?attr/secondaryTextColor"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_view" />

            <ImageView
                android:id="@+id/comment_likeView"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="2dp"
                android:contentDescription="@string/app_name"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/comment_DescTV"
                app:srcCompat="@mipmap/like_grey" />

            <TextView
                android:id="@+id/like_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="8dp"
                android:text="@string/_0"
                android:textColor="?attr/secondaryTextColor"
                android:textSize="25sp"
                app:layout_constraintBottom_toBottomOf="@+id/comment_likeView"
                app:layout_constraintStart_toEndOf="@+id/comment_likeView"
                app:layout_constraintTop_toTopOf="@+id/comment_likeView" />

            <ImageView
                android:id="@+id/cmnt_imageView"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="2dp"
                android:contentDescription="@string/app_name"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/comment_delete_imageView"
                app:layout_constraintStart_toStartOf="@+id/comment_likeView"
                app:layout_constraintTop_toBottomOf="@+id/comment_DescTV"
                app:srcCompat="@mipmap/cmnt" />

            <ImageView
                android:id="@+id/comment_delete_imageView"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="2dp"
                android:contentDescription="@string/app_name"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/comment_DescTV"
                app:srcCompat="@mipmap/dlt" />

            <TextView
                android:id="@+id/cmnt_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/_0"
                android:textColor="?attr/secondaryTextColor"
                android:textSize="25sp"
                app:layout_constraintBottom_toBottomOf="@+id/cmnt_imageView"
                app:layout_constraintStart_toEndOf="@+id/cmnt_imageView"
                app:layout_constraintTop_toTopOf="@+id/cmnt_imageView" />


        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>